Added a link to the Github repository

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
   </head>
   <body>
     <h1>Welcome to Toronto</h1>
+    <footer>This project was coded by Jutta Koulen and is 
+      <a href="https://github.com/renikoulen/toronto-travel-project" target="_blank">open sourced.</a>
+      </footer>
   </body>
 </html>
