--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
     <title>Travel Project</title>
   </head>
   <body>
-    <h1>Welcome to Toronto</h1>
-    <footer>This project was coded by Jutta Koulen and is 
-      <a href="https://github.com/renikoulen/toronto-travel-project" target="_blank">open sourced.</a>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Toronto</h1>
+        <h2>Capital City of Ontario, Canada</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Jutta Koulen and is
+        <a
+          href="https://github.com/renikoulen/toronto-travel-project"
+          target="_blank"
+          >open sourced.</a
+        >
       </footer>
+    </div>
   </body>
 </html>
