--- a/index.html
+++ b/index.html
@@ -22,12 +22,51 @@
         <a href="#more">Learn more</a>
       </header>
       <footer>
-        This project was coded by Jutta Koulen and is
-        <a
-          href="https://github.com/renikoulen/toronto-travel-project"
-          target="_blank"
-          >open sourced.</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More about Toronto</h3>
+            <ul>
+              <li>
+                <a href="https://www.torontopearson.com/en" target="_blank"
+                  >Airport Website</a
+                >
+              </li>
+              <li>
+                <a href="https://goo.gl/maps/tXFNwip11nncsQDr5" target="_blank"
+                  >Toronto City Map</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://ttc-cdn.azureedge.net/-/media/Project/TTC/DevProto/Images/Home/Routes-and-Schedules/Landing-page-pdfs/TTC_SubwayStreetcarMap_2021-11.pdf?rev=21891745721f4c26b8ca161c9e8bc78d"
+                  target="_blank"
+                  >Public Transport Map</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              My name is Jutta and I enjoyed living in Toronto a lot. I am very fond of the city. I created this page as part of a project for SheCodes Resonsive to
+              develop my coding skills.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Resonsive to
+              develop my coding skills.
+            </p>
+            <br />
+            This project was coded by Jutta Koulen and is
+            <a
+              href="https://github.com/renikoulen/toronto-travel-project"
+              target="_blank"
+              >open sourced.</a
+            >
+          </div>
+        </section>
       </footer>
     </div>
   </body>
