Added main and formatted it

--- a/index.html
+++ b/index.html
@@ -21,8 +21,35 @@
         <h2>Capital City of Ontario, Canada</h2>
         <a href="#more">Learn more</a>
       </header>
+      <main>
+        <section class="grid grid-2columns">
+          <div>
+            <img
+              src="images/Casa_Loma_Toronto.jpg"
+              alt="View of Casa Loma from one of its towers showing the main roof and two towers and part of the parking lot with parts of the city below in the background"
+            class="img-responsive"/>
+          </div>
+          <div>
+            <h2>Why Toronto?</h2>
+            <h3>Toronto - Capital of Ontario</h3>
+            <p>
+              Toronto is a diverse, energetic and liveable city, home to many
+              tourist attractions, and seemingly endless dining, shopping and
+              entertainment possibilities. It's the most populous city in
+              Canada, the centre of the country's financial sector, and the
+              provincial capital of Ontario.
+            </p>
+            <p>
+              It is also one of the most culturally and ethnically diverse
+              cities in the world: more than 80 ethnic communities are
+              represented, and over half of the city's residents were born
+              outside Canada.
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-colums-1-2-2">
           <div>
             <h3>More about Toronto</h3>
             <ul>
@@ -48,8 +75,9 @@
           <div>
             <h3>About Me</h3>
             <p>
-              My name is Jutta and I enjoyed living in Toronto a lot. I am very fond of the city. I created this page as part of a project for SheCodes Resonsive to
-              develop my coding skills.
+              My name is Jutta and I enjoyed living in Toronto a lot. I am very
+              fond of the city. I created this page as part of a project for
+              SheCodes Resonsive to develop my coding skills.
             </p>
           </div>
           <div>
