Added cards to the site

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <img
               src="images/Casa_Loma_Toronto.jpg"
               alt="View of Casa Loma from one of its towers showing the main roof and two towers and part of the parking lot with parts of the city below in the background"
-            class="img-responsive"/>
+              class="img-responsive"
+            />
           </div>
           <div>
             <h2>Why Toronto?</h2>
@@ -45,6 +46,91 @@
               represented, and over half of the city's residents were born
               outside Canada.
             </p>
+          </div>
+        </section>
+        <section class="secondary">
+          <h2 class="text-center">Neighborhoods</h2>
+          <h3 class="text-center">My favorite neighborhoods in Toronto</h3>
+          <div class="grid grid-3-colums">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/districts/Toronto_Distillery_District.jpg"
+                  alt="Distillery District"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Distillery District</h4>
+                <p>
+                  The Distillery Historic District opened in 2003 and today it
+                  is widely regarded as Canada's premier arts, culture and
+                  entertainment destination.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/tuoVLxGLJdfAQY3v7"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/districts/Toronto_Harbourfront.jpg"
+                  alt="Harbourfront"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Harbourfront</h4>
+                <p>
+                  Harbourfront draws whole families for its live entertainment,
+                  cultural arts and crafts exhibits, and its open green spaces
+                  and walking paths. The dining options in this neighbourhood
+                  reflect the demographic.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/UXKvfANBAKM14CV57"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/districts/Toronto_Kensington_Market.jpg"
+                  alt="Kensington Market"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Kensington Market</h4>
+                <p>
+                  Kensington Market is just to the west of Chinatown and is the
+                  bohemian heart of Canada, based in a multicultural history it
+                  is now a flurry of independent stores, restaurants, bars and
+                  shops that bring the world's foods to one tightly knit
+                  community. It is Toronto's most vibrant and diverse
+                  neighbourhood.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/9Ah63L57xomjuuRL8"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
           </div>
         </section>
       </main>
