--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#more">Learn more</a>
       </header>
       <main>
-        <section class="grid grid-2columns">
+        <section class="grid grid-2-columns">
           <div>
             <img
               src="images/Casa_Loma_Toronto.jpg"
