Added responsive Google Maps embed

--- a/index.html
+++ b/index.html
@@ -53,12 +53,20 @@
           <h3 class="text-center">My favorite neighborhoods in Toronto</h3>
           <div class="grid grid-3-colums">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/districts/Toronto_Distillery_District.jpg"
                   alt="Distillery District"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.8859077697116!2d-79.36170473450231!3d43.65054202912136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb3dc701c609%3A0xc3e729dcdb566a16!2sDistillery%20District%2C%20Toronto%2C%20Ontario%2C%20Kanada!5e0!3m2!1sde!2sde!4v1670171827514!5m2!1sde!2sde"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Distillery District</h4>
@@ -78,12 +86,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/districts/Toronto_Harbourfront.jpg"
                   alt="Harbourfront"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5774.874464017056!2d-79.39142972199622!3d43.639070780973285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b352982d2a06b%3A0x479446ec6338be2c!2sHarbourfront%2C%20Toronto%2C%20Ontario%2C%20Kanada!5e0!3m2!1sde!2sde!4v1670173408396!5m2!1sde!2sde"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Harbourfront</h4>
@@ -104,12 +120,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/districts/Toronto_Kensington_Market.jpg"
                   alt="Kensington Market"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.6794119230326!2d-79.40506383427694!3d43.65483791034236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b34c23d02c2eb%3A0x472d5132915be00c!2sKensington%20Market%2C%20Toronto%2C%20Ontario%2C%20Kanada!5e0!3m2!1sde!2sde!4v1670173485321!5m2!1sde!2sde"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Kensington Market</h4>
