--- a/index.html
+++ b/index.html
@@ -157,6 +157,28 @@
             </div>
           </div>
         </section>
+        <section>
+          <h2 class="text-center">Gallery</h2>
+          <h3 class="text-center">Some photos from Toronto</h3>
+          <div class="grid grid-3-colums">
+            <img
+            src="https://i.pinimg.com/564x/84/a6/7c/84a67cd4f4964d641bd9297c9f4eff1b.jpg"
+            alt="Distillery District at night"
+            class="pinterest-embeds">
+            <iframe
+              src="https://assets.pinterest.com/ext/embed.html?id=6262886970701316"
+              class="pinterest-embeds"
+              frameborder="0"
+              scrolling="no"
+            ></iframe>
+            <iframe
+              src="https://assets.pinterest.com/ext/embed.html?id=192810427787888330"
+              class="pinterest-embeds"
+              frameborder="0"
+              scrolling="no"
+            ></iframe>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-colums-1-2-2">
