Activated the Learn More link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             />
           </div>
           <div>
+            <a name="more"></a>
             <h2>Why Toronto?</h2>
             <h3>Toronto - Capital of Ontario</h3>
             <p>
@@ -162,9 +163,10 @@
           <h3 class="text-center">Some photos from Toronto</h3>
           <div class="grid grid-3-colums">
             <img
-            src="https://i.pinimg.com/564x/84/a6/7c/84a67cd4f4964d641bd9297c9f4eff1b.jpg"
-            alt="Distillery District at night"
-            class="pinterest-embeds">
+              src="https://i.pinimg.com/564x/84/a6/7c/84a67cd4f4964d641bd9297c9f4eff1b.jpg"
+              alt="Distillery District at night"
+              class="pinterest-embeds"
+            />
             <iframe
               src="https://assets.pinterest.com/ext/embed.html?id=6262886970701316"
               class="pinterest-embeds"
